--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -119,4 +119,16 @@
         android:layout_marginTop="35dp"
         />
 
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20dp"
+        android:layout_marginTop="70dp"
+        android:textStyle="bold"
+        android:textColor="@color/blue"
+        android:layout_gravity="center"
+        android:text="Project By Wira Sukma Saputra"
+        />
+
 </LinearLayout>
